# Cadence

./: .gitignore  README.md
apps/desktop/: README.md  package-lock.json  package.json  tsconfig.json
apps/frontend/: README.md  tsconfig.json
apps/local-api/: ARCHITECTURE.md  README.md  alembic.ini  main.py  pyproject.toml
apps/local-api/cadence_local_api/: app.py  settings.py
apps/local-api/cadence_local_api/adapters/: sqlite_employee_repository.py  sqlite_health_repository.py
apps/local-api/cadence_local_api/api/: deps.py  routes.py
apps/local-api/cadence_local_api/api/dependencies/: employee_deps.py  health_deps.py
apps/local-api/cadence_local_api/api/routers/: employee_routes.py  health_routes.py
apps/local-api/cadence_local_api/application/: employee.py  health.py
apps/local-api/cadence_local_api/domain/: ports.py
apps/local-api/cadence_local_api/domain/models/: employee.py
apps/local-api/cadence_local_api/domain/ports/: employee_repository.py
apps/local-api/cadence_local_api/infrastructure/: sqlite_health_repository.py
apps/local-api/migrations/versions/: 2026_07_05_1550-089e8559754e_add_employee_availabilities.py  7f377a76f1c6_create_initial_schema.py
apps/local-api/tests/: conftest.py
apps/local-api/tests/adapters/: test_schema_migrations.py  test_sqlite_employee_repository.py  test_sqlite_health_repository.py
apps/local-api/tests/application/: test_employee.py  test_health.py
apps/local-api/tests/domain/models/: test_employee.py
apps/local-api/tests/infrastructure/: test_schema_migrations.py  test_sqlite_health_repository.py
(+12 files in other folders)
