[project]
name = "cadence-local-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ty>=0.0.56",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
